# ManEater2

./: CMakeLists.txt  ManEaterOutputs.txt  README.md  base.cpp  config.cpp  config.h  config.yaml  freegames.cpp  globals.h  headers.h  main.cpp  stats.cpp  useful.cpp  useful.h
